gui/src/components/account/AccountWidget.css
#account-widget {
	position: relative;
	font-size: 0.9rem;
	width: 13rem;
}

#account-widget-head {
	background-color: var(--bg0);
	border-radius: var(--round2);
	width: 100%;
	height: var(--input-height);
	display: grid;
	grid-template-columns: minmax(0, 1fr) minmax(0, 0.2fr);
	cursor: pointer;
	box-sizing: border-box;
	border: var(--border) solid var(--bg3);
}

#account-widget-head.open {
	border: var(--border) solid var(--bg3);
	border-bottom-width: 0px;
	border-bottom-left-radius: 0px;
	border-bottom-right-radius: 0px;
}

.account-tile {
	width: 100%;

	display: grid;
	grid-template-columns: minmax(0, 0.15fr) minmax(0, 1fr);

	border-radius: var(--round);
	box-sizing: border-box;
	padding: 0.3rem;

	cursor: pointer;

	position: relative;

	transition:
		background-color 0.25s,
		transform var(--bubble);
}

.account-tile.hover {
	background-color: var(--bg3);
}

.account-tile-image {
	width: 1.2rem;
	border-radius: var(--round);
	image-rendering: pixelated;
}

.account-tile-name {
	justify-content: flex-start;
	margin-left: 0.5rem;
	font-weight: bold;
	overflow: hidden;
	width: 100%;
}

.account-tile-edit {
	position: absolute;
	right: 0.75rem;
	height: 100%;
}

#account-widget-dropdown {
	position: absolute;
	left: 0px;
	width: 100%;

	background-color: var(--bg);

	display: flex;
	flex-direction: column;
	gap: 0rem;

	border-bottom-left-radius: var(--round2);
	border-bottom-right-radius: var(--round2);
	border: var(--border) solid var(--bg3);
	box-sizing: border-box;

	z-index: 10;
}

